# srcML

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/libsrcml/: CMakeLists.txt  export_list_emscripten  srcml_archive.cpp  srcml_unit.cpp
test/libsrcml/testsuite/: CMakeLists.txt
unsystematictests/: reuse-xpath-unit.cpp  xpath-element.cpp
